# Kettu-Mem

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  SKILL.md  VERSION.json  docker-compose.yml  kettu_mem.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  ERROR_CATALOG.md  EVALUATION_SPEC.md  MEMORY_EVAL_SPEC.md  PLUGIN_BLUEPRINT.md  README_RUNBOOK.md  TECHNICAL_SPEC.md
scripts/: agent_sim.py  benchmark.py  benchmark_production.py  hermes_backup.py  hermes_doctor.py  hermes_fault_test.py  hermes_soak.py  soak_test.py
src/: .coverage  VERSION.json  memory_manager.py  server.py
src/api/: __init__.py  error_buffer.py  metrics.py  security.py  server.py
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  faiss_index.py
src/evaluation/: __init__.py  eval_framework.py  eval_store.py  haes_calculator.py  memory_eval_framework.py  memory_eval_store.py  memory_metrics_engine.py  memory_telemetry.py  mes_calculator.py  metrics_engine.py  telemetry_collector.py
src/extractors/: __init__.py  cognitive_runtime.py  compression.py  ingestion_filter.py  mem0.py  memory_quality.py
src/kettu_mem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/layers/: __init__.py  cognitive_runtime.py  compression.py  context_builder.py  faiss_index.py  l3_verbatim.py  mem0.py  sqlite_index.py
src/memory/: __init__.py  memory_manager.py
src/plugin/: index.js  index.ts  openclaw.plugin.json  package.json
src/retrieval/: __init__.py  context_builder.py  hybrid_search.py
src/storage/: __init__.py  l3_verbatim.py  session_isolation.py  sqlite_index.py
src/tests/: test_all.py  test_api_integration.py  test_api_security_http.py  test_cognitive.py  test_concurrent_sessions.py  test_evaluation.py  test_memory_evaluation.py  test_security.py  test_spike.py  test_tool_output_regression.py
src/utils/: __init__.py  logging.py
